--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,63 +203,17 @@
 .mtphr-members-social-site {
 	float: left;
 	display: block;
+	margin: 0 2px 2px 0;
+}
+.mtphr-members-social-site i {
+	display: block;
 	width: 20px;
 	height: 20px;
-	background-image: url(../images/icons-social-small.png);
-	background-repeat: no-repeat;
-	margin: 0 2px 2px 0;
-	text-indent: -9999px;
+	color: #FFF;
+	font-size: .9em;
+	line-height: 20px;
+	text-align: center;
 	background-color: #CCC;
 }
-.mtphr-members-social-twitter { background-position: 0px 0px; }
-.mtphr-members-social-facebook { background-position: -21px 0px; }
-.mtphr-members-social-linkedin { background-position: -42px 0px; }
-.mtphr-members-social-googleplus { background-position: -63px 0px; }
-.mtphr-members-social-flickr { background-position: -84px 0px; }
-.mtphr-members-social-tridadvisor { background-position: -105px 0px; }
-.mtphr-members-social-reddit { background-position: -126px 0px; }
-.mtphr-members-social-posterous { background-position: -147px 0px; }
-.mtphr-members-social-plurk { background-position: -168px 0px; }
-.mtphr-members-social-ebay { background-position: -189px 0px; }
-.mtphr-members-social-netvibes { background-position: 0px -21px; }
-.mtphr-members-social-picasa { background-position: -21px -21px; }
-.mtphr-members-social-digg { background-position: -42px -21px; }
-.mtphr-members-social-newsvine { background-position: -63px -21px; }
-.mtphr-members-social-rss { background-position: -84px -21px; }
-.mtphr-members-social-stumbleupon { background-position: -105px -21px; }
-.mtphr-members-social-aim { background-position: -126px -21px; }
-.mtphr-members-social-youtube { background-position: -147px -21px; }
-.mtphr-members-social-lastfm { background-position: -168px -21px; }
-.mtphr-members-social-myspace { background-position: -189px -21px; }
-.mtphr-members-social-msn { background-position: 0px -42px; }
-.mtphr-members-social-paypal { background-position: -21px -42px; }
-.mtphr-members-social-windows { background-position: -42px -42px; }
-.mtphr-members-social-wordpress { background-position: -63px -42px; }
-.mtphr-members-social-yahoo { background-position: -84px -42px; }
-.mtphr-members-social-dribble { background-position: -105px -42px; }
-.mtphr-members-social-apple { background-position: -126px -42px; }
-.mtphr-members-social-bebo { background-position: -147px -42px; }
-.mtphr-members-social-cargo { background-position: -168px -42px; }
-.mtphr-members-social-ember { background-position: -189px -42px; }
-.mtphr-members-social-evernote { background-position: 0px -63px; }
-.mtphr-members-social-googletalk { background-position: -21px -63px; }
-.mtphr-members-social-skype { background-position: -42px -63px; }
-.mtphr-members-social-feedburner { background-position: -63px -63px; }
-.mtphr-members-social-tumblr { background-position: -84px -63px; }
-.mtphr-members-social-android { background-position: -105px -63px; }
-.mtphr-members-social-bing { background-position: -126px -63px; }
-.mtphr-members-social-metacafe { background-position: -147px -63px; }
-.mtphr-members-social-orkut { background-position: -168px -63px; }
-.mtphr-members-social-delicious { background-position: -189px -63px; }
-.mtphr-members-social-amazon { background-position: 0px -84px; }
-.mtphr-members-social-grooveshark { background-position: -21px -84px; }
-.mtphr-members-social-deviantart { background-position: -42px -84px; }
-.mtphr-members-social-behance { background-position: -63px -84px; }
-.mtphr-members-social-vimeo { background-position: -84px -84px; }
-.mtphr-members-social-mobileme { background-position: -105px -84px; }
-.mtphr-members-social-magnolia { background-position: -126px -84px; }
-.mtphr-members-social-mixx { background-position: -147px -84px; }
-.mtphr-members-social-blogger { background-position: -168px -84px; }
-.mtphr-members-social-yahoobuzz { background-position: -189px -84px; }
 
 
