--- a/assets/css/style-admin.css
+++ b/assets/css/style-admin.css
@@ -1,41 +1,236 @@
-/* Table of Contents
+/* --------------------------------------------------------- */
+/* !Settings pages */
+/* --------------------------------------------------------- */
 
-* Dashboard Menu Icons
-* Edit Screen Rows
-* Edit Screen Icons
-* Setting Screen Icons
-
-*/
-
-
-/* Dashboard Menu Icon
------------------------------------------------------------- */
-
-#menu-posts-mtphr_member .wp-menu-image {
-	background: url(../images/icon-16.png) no-repeat 6px -32px !important;
+.mtphr_member_page_mtphr_members_settings_menu .subsubsub {
+	float: none;
 }
-#menu-posts-mtphr_member:hover .wp-menu-image,
-#menu-posts-mtphr_member.wp-has-current-submenu .wp-menu-image {
-	background-position:6px 0px !important;
+.mtphr_member_page_mtphr_members_settings_menu .form-table {
+	max-width: 1000px;
+	background: #FFF;
+	border: 1px solid #dfdfdf;
+	margin-top: 0;
+	margin-bottom: 10px;
+}
+.mtphr_member_page_mtphr_members_settings_menu .form-table > tbody > tr > th {
+	background: #fefefe;
+	border-right: 1px solid #dfdfdf;
+	border-bottom: 1px solid #f7f7f7;
+	padding-left: 10px;
+}
+.mtphr_member_page_mtphr_members_settings_menu .form-table > tbody > tr > td {
+	border-bottom: 1px solid #f7f7f7;
+}
+.mtphr_member_page_mtphr_members_settings_menu .form-table > tbody > tr:last-child th,
+.mtphr_member_page_mtphr_members_settings_menu .form-table > tbody > tr:last-child td {
+	border-bottom: none;
+}
+.mtphr_member_page_mtphr_members_settings_menu #wpbody-content h3 {
+	-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+	max-width: 1000px;
+	background: #fafafa;
+	border: 1px solid #dfdfdf;
+	border-bottom-width: 0;
+	padding: 10px;
+	margin-bottom: 0;
+}
+.mtphr_member_page_mtphr_members_settings_menu #wpbody-content h3 input {
+	float: right;
+	font-weight: normal;
+	margin-top: -4px;
+}
+.mtphr_member_page_mtphr_members_settings_menu #wpbody-content h3 + p {
+	-moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+	max-width: 1000px;
+	background: #fafafa;
+	border: 1px solid #dfdfdf;
+	border-top-width: 0;
+	border-bottom-width: 0;
+	padding: 0 10px 10px;
+	margin: 0;
+}
+.mtphr_member_page_mtphr_members_settings_menu textarea {
+	width: 100%;
 }
 
-/* Edit Screen Rows
------------------------------------------------------------- */
 
-.column-shortcode_id {
-	width: 40px;
+/* --------------------------------------------------------- */
+/* !Page tabs */
+/* --------------------------------------------------------- */
+
+#mtphr-members-page-tabs {
+	margin-top: 15px;
+}
+#mtphr-members-page-tabs ul {
+	border-bottom: 1px solid #ccc;
+	margin-bottom: 10px;
+}
+#mtphr-members-page-tabs ul li {
+	background: none;
+	padding: 0;
+}
+#mtphr-members-page-tabs ul li.ui-state-active {
+	border-color: #ccc #ccc #f5f5f5;
+	border-width: 1px;
+}
+#mtphr-members-page-tabs ul li a {
+	display: inline-block;
+	color: #aaa;
+	text-decoration: none;
+	border: none;
+	outline: none;
+	padding: 4px 14px 6px;
+}
+#mtphr-members-page-tabs ul li.ui-state-active a {
+	color: #464646;
+}
+#mtphr-members-page-tabs ul li a:hover {
+	color: #d54e21;
+}
+.mtphr-members-page-tabs-page {
+	display: none;
 }
 
-/* Edit Screen Icon
------------------------------------------------------------- */
 
-#icon-edit.icon32-posts-mtphr_member {
-	background: url(../images/icon-32.png) no-repeat;
+/* --------------------------------------------------------- */
+/* !Table */
+/* --------------------------------------------------------- */
+
+.mtphr-members-table {
+	width: 100%;
+	border-spacing: 0;
+}
+.mtphr-members-table > tbody > tr > td {
+	text-align: left;
+	vertical-align: top;
+	border-bottom: 1px solid #e9e9e9;
+	padding: 10px 2px;
+}
+.mtphr-members-table > tbody > tr:first-child > td {
+	border-top: 1px solid #dfdfdf;
+}
+.mtphr-members-table > tbody > tr:last-child > td,
+.mtphr-members-table > tbody > tr:last-child > td.mtphr-members-label {
+	border-bottom-color: #dfdfdf;
+}
+.mtphr-members-table > tbody > tr > td.mtphr-members-label {
+	width: 20%;
+	max-width: 200px;
+	background: #f0f0f0;
+	border-left: 1px solid #dfdfdf;
+	border-bottom: 1px solid #e9e9e9;
+}
+.mtphr-members-table > tbody > tr > td:last-child,
+.mtphr-members-table > tbody > tr > td.mtphr-members-label {
+	border-right: 1px solid #dfdfdf;
+}
+.mtphr-members-table > tbody > tr > td:first-child,
+.mtphr-members-table > tbody > tr > td.mtphr-members-label + td {
+	padding-left: 10px;
+}
+.mtphr-members-table > tbody > tr > td:last-child,
+.mtphr-members-table > tbody > tr > td.mtphr-members-label {
+	padding-right: 10px;
+}
+.mtphr-members-table label {
+	display: inline-block;
+	margin: 0 10px 10px 0;
+}
+.mtphr-members-table label.checkbox-label {
+	font-weight: normal;
+	margin: 0;
+}
+.mtphr-members-table input[type="text"],
+.mtphr-members-table textarea {
+	width: 100%;
+}
+.mtphr-members-table input[type="number"] {
+	width: 60px;
+}
+.mtphr-members-table .mceIframeContainer {
+	background: #FFF;
+}
+.mtphr-members-label-alt {
+	display: block;
+	width: auto;
+	padding-right: none !important;
+	margin-bottom: 5px;
+}
+.mtphr-members-label label,
+.mtphr-members-label-alt label {
+	display: block;
+	font-weight: bold;
+	font-size: 12px;
+	margin: 0;
+}
+.mtphr-members-label small,
+.mtphr-members-label-alt small {
+	display: block;
+	font-size: 10px;
+	line-height: 13px;
+	font-style: italic;
+	font-weight: lighter;
+}
+.mtphr-members-radio,
+.mtphr-members-table label.mtphr-members-radio {
+	font-weight: normal;
+	margin-right: 8px;
+	margin-left: 2px;
+	margin-bottom: 0;
+}
+.mtphr-members-radio input,
+.mtphr-members-table label.mtphr-members-radio input {
+	margin-top: -1px;
+	margin-right: 2px;
+}
+.mtphr-members-checkbox,
+.mtphr-members-table label.mtphr-members-checkbox {
+	font-weight: normal;
+	margin-right: 8px;
+	margin-left: 1px;
+	margin-bottom: 0;
+}
+.mtphr-members-checkbox input,
+.mtphr-members-table label.mtphr-members-checkbox input {
+	margin-top: 0;
+	margin-right: 2px;
 }
 
-/* Setting Screen Icons
------------------------------------------------------------- */
 
-#icon-mtphr_member {
-	background: url(../images/icon-32.png) no-repeat;
+/* --------------------------------------------------------- */
+/* !Sub tables */
+/* --------------------------------------------------------- */
+
+.mtphr-members-sub-table {
+	width: 100%;
+	border-spacing: 0;
+}
+.mtphr-members-sub-table label {
+	margin: 0;
+}
+.mtphr-members-sub-table td {
+	padding: 2px;
+}
+.mtphr-members-sub-table tr > td:first-child {
+	padding-left: 0;
+}
+.mtphr-members-sub-table tr > td:last-child {
+	padding-right: 0;
+}
+.mtphr-members-sub-table tr:first-child > td {
+	padding-top: 0;
+}
+.mtphr-members-sub-table tr:last-child > td {
+	padding-bottom: 0;
+}
+.mtphr-members-sub-table input[type="text"],
+.mtphr-members-sub-table textarea {
+	display: block;
+	width: 100%;
+}
+.mtphr-members-sub-label {
+	display: block;
+	font-style: italic;
+	line-height: 16px;
+	padding: 0 3px;
 }
